<resources>
    <string name="app_name">Store</string>
    <string name="action_settings">Settings</string>
    <string name="register_title">Registrar Usuario</string>
    <string name="mail_placeholder">Email</string>
    <string name="pass_placeholder">Contraseña</string>
    <string name="name_placeholder">Nombre</string>
    <string name="surname_placeholder">Apellidos</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">Registrar</string>
    <string name="details_txt">Detalles</string>
    <string name="favs_txt">Favoritos</string>
</resources>